--- a/jqgant.css
+++ b/jqgant.css
@@ -41,7 +41,14 @@
 	border: 1px solid #ddd;
 	padding-left: 2px;
 	padding-right: 5px;
+	padding-top:0px;
+	padding-bottom:0px;
+	height: 22px;
+	overflow:hidden;
+}
 
+#jqgant_task_table select {
+	height: 18px;
 }
 
 
